--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "react": "17.0.1",
     "react-native": "0.64.1",
     "react-native-circular-progress": "^1.3.7",
+    "react-native-confetti-cannon": "^1.5.2",
     "react-native-elements": "^3.4.2",
     "react-native-fast-image": "^8.3.7",
+    "react-native-fs": "^2.18.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-maps": "^0.28.0",
@@ -35,12 +37,14 @@
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
+    "react-native-share": "^7.1.0",
     "react-native-step-indicator": "^1.0.3",
     "react-native-svg": "^12.1.1",
     "react-native-svg-transformer": "^0.14.3",
     "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^8.1.0",
     "react-native-version-number": "^0.3.6",
+    "react-native-view-shot": "^3.1.2",
     "react-redux": "^7.2.4",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "redux": "^4.1.1",
