--- a/package.json
+++ b/package.json
@@ -42,12 +42,13 @@
     "react-native-step-indicator": "^1.0.3",
     "react-native-svg": "^12.1.1",
     "react-native-svg-transformer": "^0.14.3",
+    "react-native-tracking-transparency": "^0.1.1",
     "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^8.1.0",
     "react-native-version-number": "^0.3.6",
+    "react-native-view-shot": "^3.1.2",
     "react-native-webview": "^11.13.0",
     "react-native-youtube-iframe": "^2.1.2",
-    "react-native-view-shot": "^3.1.2",
     "react-redux": "^7.2.4",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "redux": "^4.1.1",
