--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 os:
 - linux
 before_install:
-- curl -sL https://deb.nodesource.com/setup_10.x | sudo -E bash -
-- sudo apt-get install -y nodejs
+- nvm install 10
+- node --version
 - npm --version
 - node --version
 - npx --version
@@ -11,13 +11,6 @@ before_install:
 - export PATH=$PATH:$ANDROID_HOME/tools
 - export PATH=$PATH:$ANDROID_HOME/tools/bin
 - export PATH=$PATH:$ANDROID_HOME/platform-tools
-- git clone https://github.com/facebook/watchman.git -b v4.9.0 --depth 1
-- cd watchman
-- "./autogen.sh"
-- "./configure"
-- make
-- sudo make install
-- cd ..
 install:
 - npm install
 language: android
