--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 os:
 - linux
 before_install:
-- nvm install 10
+- nvm install 6
 - node --version
 - npm --version
 - node --version
@@ -28,6 +28,7 @@ android:
   - extra-android-m2repository
 script:
 - ls -sh
+- node --version
 - cd android
 - ls -sh 
 - sudo chmod +x gradlew && sudo ./gradlew clean && sudo ./gradlew assembleRelease
