--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-fast-image": "^8.3.7",
     "react-native-fs": "^2.18.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-crop-picker": "^0.36.4",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-maps": "^0.28.0",
     "react-native-phone-number-input": "^2.1.0",
@@ -39,6 +40,7 @@
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
     "react-native-share": "^7.1.0",
+    "react-native-simple-radio-button": "^2.7.4",
     "react-native-step-indicator": "^1.0.3",
     "react-native-svg": "^12.1.1",
     "react-native-svg-transformer": "^0.14.3",
