--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "moment": "^2.29.1",
     "react": "17.0.1",
     "react-native": "0.64.1",
+    "react-native-app-intro-slider": "^4.0.4",
     "react-native-circular-progress": "^1.3.7",
     "react-native-confetti-cannon": "^1.5.2",
     "react-native-elements": "^3.4.2",
