--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "moment": "^2.29.1",
     "react": "17.0.1",
     "react-native": "0.64.1",
+    "react-native-app-intro-slider": "^4.0.4",
     "react-native-circular-progress": "^1.3.7",
     "react-native-confetti-cannon": "^1.5.2",
     "react-native-elements": "^3.4.2",
@@ -35,6 +36,7 @@
     "react-native-image-crop-picker": "^0.36.4",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-maps": "^0.28.0",
+    "react-native-onboarding-swiper": "^1.1.4",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
