--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "react-native-fs": "^2.18.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-crop-picker": "^0.36.4",
+    "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-maps": "^0.28.0",
     "react-native-onboarding-swiper": "^1.1.4",
+    "react-native-orientation": "^3.1.3",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
