--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-fast-image": "^8.3.7",
     "react-native-fs": "^2.18.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-google-fit": "^0.17.1",
     "react-native-image-crop-picker": "^0.36.4",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-maps": "^0.28.0",
