--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "axios": "^0.21.1",
+    "libphonenumber-js": "^1.9.39",
     "lottie-react-native": "^4.0.3",
     "moment": "^2.29.1",
     "react": "17.0.1",
