--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-screens": "^3.4.0",
     "react-native-share": "^7.1.0",
     "react-native-simple-radio-button": "^2.7.4",
+    "react-native-splash-screen": "^3.2.0",
     "react-native-step-indicator": "^1.0.3",
     "react-native-svg": "^12.1.1",
     "react-native-svg-transformer": "^0.14.3",
