--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -141,9 +141,12 @@ android {
         applicationId "com.tym.tym_100ascent"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 5
-        versionName "1.0.5"
+        versionCode 6
+        versionName "1.1.0"
         vectorDrawables.useSupportLibrary = true
+        manifestPlaceholders = [
+            appAuthRedirectScheme: 'com.googleusercontent.apps.730727502414-urev3kc18jh61qc41r3slea7pkltmvk5'
+        ]
     }
     splits {
         abi {
