--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/stack": "^5.14.5",
     "axios": "^0.21.1",
     "libphonenumber-js": "^1.9.39",
+    "lottie-ios": "^3.2.3",
     "lottie-react-native": "^4.0.3",
     "moment": "^2.29.1",
     "react": "17.0.1",
