--- a/ios/TYM_100Ascent/Info.plist
+++ b/ios/TYM_100Ascent/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>100Ascent</string>
+	<string>100 Ascent</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -17,7 +17,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>$(MARKETING_VERSION)</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleURLTypes</key>
@@ -25,8 +25,11 @@
 		<dict>
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>org.tym.TYM-100Ascent</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
+				<string>com.googleusercontent.apps.730727502414-bk7k9runddlpv1s0b10n4q1tnfav2o1e</string>
 				<string>com.googleusercontent.apps.730727502414-mod835eeflbdpf3s3v7d289h08fb76ec</string>
 			</array>
 		</dict>
@@ -48,6 +51,8 @@
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>100 Ascent tracks user data and performance to help users assess their fitness journey. It also helps in personalizing the experience and deciding rewards for your fitness journey</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app requires access to the photo library.</string>
 	<key>NSUserTrackingUsageDescription</key>
 	<string>100 Ascent tracks user data and performance to help users assess their fitness journey. It also helps in personalizing the experience and deciding rewards for your fitness journey</string>
 	<key>UIAppFonts</key>
