--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-image-crop-picker": "^0.36.4",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-maps": "^0.28.0",
+    "react-native-modal-datetime-picker": "^13.0.1",
     "react-native-onboarding-swiper": "^1.1.4",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-reanimated": "^2.2.0",
