--- a/ios/TYM_100Ascent/Info.plist
+++ b/ios/TYM_100Ascent/Info.plist
@@ -29,7 +29,7 @@
 			<string>org.tym.TYM-100Ascent</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>com.googleusercontent.apps.730727502414-bk7k9runddlpv1s0b10n4q1tnfav2o1e</string>
+				<string>com.googleusercontent.apps.730727502414-urev3kc18jh61qc41r3slea7pkltmvk5</string>
 				<string>com.googleusercontent.apps.730727502414-mod835eeflbdpf3s3v7d289h08fb76ec</string>
 			</array>
 		</dict>
@@ -52,7 +52,7 @@
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>100 Ascent tracks user data and performance to help users assess their fitness journey. It also helps in personalizing the experience and deciding rewards for your fitness journey</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>This app requires access to the photo library.</string>
+	<string>100 Ascent requires access to the photo library to set your profile picture and display your identity</string>
 	<key>NSUserTrackingUsageDescription</key>
 	<string>100 Ascent tracks user data and performance to help users assess their fitness journey. It also helps in personalizing the experience and deciding rewards for your fitness journey</string>
 	<key>UIAppFonts</key>
