--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -40,6 +40,25 @@
         android:launchMode="singleTask"
         android:windowSoftInputMode="adjustResize"
         android:exported="true">
+
+
+      <!-- Intent filter to handle 100ascent:// schemes -->
+      <intent-filter>
+        <action android:name="android.intent.action.VIEW"/>
+        <category android:name="android.intent.category.DEFAULT"/>
+        <category android:name="android.intent.category.BROWSABLE"/>
+        <data android:scheme="100ascent"/>
+      </intent-filter>
+
+      <!-- Intent filter to handler http and https://app.100ascent.com/ schemes  -->
+      <intent-filter>
+        <action android:name="android.intent.action.VIEW"/>
+        <category android:name="android.intent.category.DEFAULT"/>
+        <category android:name="android.intent.category.BROWSABLE"/>
+        <data android:scheme="http" />
+        <data android:scheme="https" />
+        <data android:host="app.100ascent.com"/>
+      </intent-filter>
       </activity>
     </application>
 </manifest>
