--- a/package.json
+++ b/package.json
@@ -11,35 +11,35 @@
   },
   "dependencies": {
     "@mapbox/polyline": "^1.1.1",
+    "@notifee/react-native": "3.0.4",
     "@react-native-community/async-storage": "^1.12.1",
-    "@react-native-community/datetimepicker": "^3.5.2",
+    "@react-native-community/datetimepicker": "^5.1.0",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-firebase/app": "^12.1.0",
-    "@react-native-firebase/auth": "^12.1.0",
-    "@react-native-firebase/messaging": "^12.4.0",
-    "@react-navigation/bottom-tabs": "^5.11.11",
-    "@react-navigation/drawer": "^5.12.5",
-    "@react-navigation/native": "^5.9.4",
-    "@react-navigation/stack": "^5.14.5",
-    "axios": "^0.21.1",
+    "@react-native-firebase/app": "^14.3.0",
+    "@react-native-firebase/auth": "^14.3.0",
+    "@react-native-firebase/messaging": "^14.3.0",
+    "@react-navigation/bottom-tabs": "^6.2.0",
+    "@react-navigation/drawer": "^6.3.0",
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/stack": "^6.1.1",
+    "axios": "^0.25.0",
     "libphonenumber-js": "^1.9.39",
-    "lottie-ios": "^3.2.3",
-    "lottie-react-native": "^4.0.3",
+    "lottie-react-native": "^5.0.1",
     "moment": "^2.29.1",
-    "react": "17.0.1",
-    "react-native": "0.64.1",
+    "react": "17.0.2",
+    "react-native": "0.67.2",
     "react-native-app-auth": "^6.4.0",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-circular-progress": "^1.3.7",
     "react-native-confetti-cannon": "^1.5.2",
     "react-native-elements": "^3.4.2",
     "react-native-fast-image": "^8.3.7",
+    "react-native-firebase": "^5.6.0",
     "react-native-fs": "^2.18.0",
-    "react-native-gesture-handler": "^1.10.3",
-    "react-native-image-crop-picker": "^0.36.4",
+    "react-native-gesture-handler": "^2.2.0",
+    "react-native-image-crop-picker": "^0.37.2",
     "react-native-linear-gradient": "^2.5.6",
-    "react-native-maps": "^0.28.0",
-    "react-native-modal-datetime-picker": "^13.0.1",
+    "react-native-maps": "^0.30.1",
     "react-native-onboarding-swiper": "^1.1.4",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-reanimated": "^2.2.0",
@@ -50,11 +50,11 @@
     "react-native-splash-screen": "^3.2.0",
     "react-native-step-indicator": "^1.0.3",
     "react-native-svg": "^12.1.1",
-    "react-native-svg-transformer": "^0.14.3",
+    "react-native-svg-transformer": "^1.0.0",
     "react-native-svg-uri": "^1.2.3",
     "react-native-tracking-transparency": "^0.1.1",
     "react-native-uuid": "^2.0.1",
-    "react-native-vector-icons": "^8.1.0",
+    "react-native-vector-icons": "^9.0.0",
     "react-native-version-number": "^0.3.6",
     "react-native-view-shot": "^3.1.2",
     "react-native-webview": "^11.13.0",
@@ -67,16 +67,16 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "^2.0.0",
-    "@types/jest": "^26.0.23",
-    "@types/react-native": "^0.64.5",
-    "@types/react-test-renderer": "^16.9.2",
-    "babel-jest": "^26.6.3",
-    "eslint": "^7.14.0",
-    "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "^0.64.0",
-    "react-test-renderer": "17.0.1",
-    "typescript": "^3.8.3"
+    "@react-native-community/eslint-config": "^3.0.1",
+    "@types/jest": "^27.4.0",
+    "@types/react-native": "^0.66.15",
+    "@types/react-test-renderer": "^17.0.1",
+    "babel-jest": "^27.4.6",
+    "eslint": "^8.8.0",
+    "jest": "^27.4.7",
+    "metro-react-native-babel-preset": "^0.67.0",
+    "react-test-renderer": "17.0.2",
+    "typescript": "^4.5.5"
   },
   "resolutions": {
     "@types/react": "^17"
