--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lottie-ios": "^3.2.3",
     "lottie-react-native": "^4.0.3",
     "moment": "^2.29.1",
+    "paytm_allinone_react-native": "^1.1.0",
     "react": "17.0.1",
     "react-native": "0.64.1",
     "react-native-app-auth": "^6.4.0",
