--- a/android/build.gradle
+++ b/android/build.gradle
@@ -35,7 +35,7 @@ allprojects {
             url("$rootDir/../node_modules/jsc-android/dist")
         }
         maven { url 'https://maven.google.com' }
-
+        maven { url "https://artifactory.paytm.in/libs-release-local" }
         google()
         jcenter()
         maven { url 'https://www.jitpack.io' }
