--- a/ios/TYM_100Ascent/Info.plist
+++ b/ios/TYM_100Ascent/Info.plist
@@ -33,6 +33,14 @@
 				<string>com.googleusercontent.apps.730727502414-mod835eeflbdpf3s3v7d289h08fb76ec</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>paytmKJPngf43133528107300</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
